--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,13 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
+      - name: npm run build
+        run: npm run build
+      - name: npm run test
+        run: npm run test
+      - name: e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:3001
