--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,6 +23,8 @@ jobs:
         run: npm run eslint
       - name: npm run build
         run: npm run build
+      - name: install cross-env
+        run: npm install --save-dev cross-env
       - name: npm run test
         run: npm run test
       - name: e2e tests
