--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "eslint": "eslint './**/*.{js,jsx}'",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles --silent",
     "start:test": "cross-env NODE_ENV=test node index.js",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "eslintConfig": {
     "extends": "react-app"
