--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,6 +40,9 @@ jobs:
       
       - name: npm run test
         run: npm run test
+        env:
+          TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
+          SECRET: ${{ secrets.SECRET}}
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
