--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "json-server": "^0.16.2",
     "redux-devtools-extension": "^2.13.8",
     "supertest": "^6.1.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
