--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,9 +45,9 @@ jobs:
       - name: E2E tests
         uses: cypress-io/github-action@v2
         with:
-          command: npm run cypress:open
+          command: npm run test:e2e
           start: npm run start-prod
-          wait-on: http://localhost:3000
+          wait-on: http://localhost:3001
         env:
           TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
           SECRET: ${{ secrets.SECRET}}
