--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           command: npm run cypress:open
           start: npm run start-prod
-          wait-on: http://localhost:3001
+          wait-on: 'http://localhost:3001'
         env:
           TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
           SECRET: ${{ secrets.SECRET}}
