--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -67,7 +67,7 @@ jobs:
           heroku_email: "sirpaquillo1@yahoo.com.mx"
           dontuseforce: false
           procfile: "web: npm run start:prod"
-          healthcheck: "https://bloglist-pipeline.herokuapp.com/health"
-          checkstring: "ok"
+          # healthcheck: "https://bloglist-pipeline.herokuapp.com/health"
+          # checkstring: "ok"
           delay: 5
           rollbackonhealthcheckfailed: true
