--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,8 +23,8 @@ jobs:
         run: npm run eslint
       - name: npm run build
         run: npm run build
-      - name: install cross-end
-        run: npm install --save-dev cross-env
+      - name: install cross-env
+        run: npm install -g cross-env
       - name: install async-errors
         run: npm install express-async-errors --save
       - name: install mongoose
