--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,6 +42,7 @@ jobs:
         env:
           TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
           SECRET: ${{ secrets.SECRET }}
+          NODE_ENV: "test"
       - name: E2E tests
         uses: cypress-io/github-action@v2
         with:
@@ -51,6 +52,7 @@ jobs:
         env:
           TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
           SECRET: ${{ secrets.SECRET }}
+          NODE_ENV: "test"
       - name: npm run build
         run: npm run build
         # - name: Bump version and push tag
@@ -73,3 +75,5 @@ jobs:
           # checkstring: "ok"
           delay: 5
           rollbackonhealthcheckfailed: true
+        env:
+          NODE_ENV: "production"
