--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "production": "node index.js",
     "build": "react-scripts build",
     "eslint": "eslint './**/*.{js,jsx}'",
-    "test": "jest --verbose --runInBand --detectOpenHandles --silent",
-    "start:test": "node index.js",
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles --silent",
+    "start:test": "cross-env NODE_ENV=test node index.js",
     "cypress:open": "cypress open",
     "test:e2e": "cypress run"
   },
