update for deployment

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -64,3 +64,5 @@ jobs:
           # checkstring: "ok"
           delay: 5
           rollbackonhealthcheckfailed: true
+        env:
+          NODE_ENV: 'production'
