--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "set PORT=3000 && react-scripts start",
-    "production": "cross-env NODE_ENV=production node index.js",
+    "production": "node index.js",
     "build": "react-scripts build",
     "eslint": "eslint './**/*.{js,jsx}'",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles --silent",
@@ -22,6 +22,9 @@
   ],
   "author": "Paco Zavala",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/PacoZG/bloglist-workflow/issues"
+  },
   "homepage": "https://github.com/PacoZG/bloglist-workflow",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
