--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "set PORT=3000 && react-scripts start",
-    "production": "node index.js",
+    "production": "cross-env NODE_ENV=production node index.js",
     "build": "react-scripts build",
     "eslint": "eslint './**/*.{js,jsx}'",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles --silent",
