--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "eslint": "^7.11.0",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
