--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,6 +28,7 @@ jobs:
         env:
           TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
           SECRET: ${{ secrets.SECRET }}
+          NODE_ENV: test
       - name: E2E tests
         uses: cypress-io/github-action@v2
         with:
@@ -37,6 +38,7 @@ jobs:
         env:
           TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
           SECRET: ${{ secrets.SECRET }}
+          NODE_ENV: test
       - name: Deployment to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ', '), '#skip') }}
@@ -50,3 +52,5 @@ jobs:
           # checkstring: "ok"
           delay: 5
           rollbackonhealthcheckfailed: true
+        env:
+          NODE_ENV: production
