--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "src/index.js",
   "scripts": {
     "start": "set PORT=3000 && react-scripts start",
-    "production": "cross-env NODE_ENV=production node index.js",
+    "production": "node index.js",
     "build": "react-scripts build",
     "eslint": "eslint './**/*.{js,jsx}'",
-    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --detectOpenHandles --silent",
-    "start:test": "cross-env NODE_ENV=test node index.js",
+    "test": "jest --verbose --runInBand --detectOpenHandles --silent",
+    "start:test": "node index.js",
     "cypress:open": "cypress open",
     "test:e2e": "cypress run"
   },
