--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,10 +44,10 @@ jobs:
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ', '), '#skip') }}
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "bloglist-pipeline" # Must be unique in Heroku
+          heroku_app_name: 'bloglist-pipeline' # Must be unique in Heroku
           heroku_email: "sirpaquillo1@yahoo.com.mx"
           dontuseforce: false
-          procfile: "web: npm run production"
+          procfile: 'web: npm run production'
           # healthcheck: "https://bloglist-pipeline.herokuapp.com/health"
           # checkstring: "ok"
           delay: 5
