--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Local tests
         run: npm run test
         env:
+          NODE_ENV: test
           TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
           SECRET: ${{ secrets.SECRET }}
-          NODE_ENV: 'test'
       - name: E2E tests
         uses: cypress-io/github-action@v2
         with:
@@ -36,9 +36,9 @@ jobs:
           start: npm run start:test, npm start
           wait-on: 'http://localhost:3001'
         env:
+          NODE_ENV: test
           TEST_MONGODB_URI: ${{ secrets.TEST_MONGODB_URI }}
           SECRET: ${{ secrets.SECRET }}
-          NODE_ENV: 'test'
       - name: Deployment to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ', '), '#skip') }}
@@ -53,4 +53,4 @@ jobs:
           delay: 5
           rollbackonhealthcheckfailed: true
         env:
-          NODE_ENV: 'production'
+          NODE_ENV: production
