--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -54,3 +54,4 @@ jobs:
           rollbackonhealthcheckfailed: true
         env:
           NODE_ENV: 'production'
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
