--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -1,8 +1,8 @@
 name: Deployment pipeline healthcheck
 
 on:
-#   schedule:
-#     - cron:  '00 00 * * 1-5/2' # At 00:00 on every 2nd day-of-week from Monday through Friday.”
+  schedule:
+    - cron:  '* * * * * *' # At 00:00 on every 2nd day-of-week from Monday through Friday.”
 
 jobs:
   healthcheck:
