--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -2,7 +2,7 @@ name: Deployment pipeline healthcheck
 
 on:
   schedule:
-    - cron:  '* * * * *' # At 00:00 on every 2nd day-of-week from Monday through Friday.”
+    - cron:  '* * * * *' #'0 0 1 */2 *' # At 00:00 on every 2nd day-of-week from Monday through Friday.”
 
 jobs:
   healthcheck:
