--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,17 +45,17 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-          DEFAULT_BUMP: "#patch"
+          DEFAULT_BUMP: '#patch'
       - name: Deployment to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         if: ${{ github.event_name == 'push' && !contains(join(github.event.commits.*.message, ', '), '#skip') }}
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'bloglist-pipeline' # Must be unique in Heroku
-          heroku_email: "sirpaquillo1@yahoo.com.mx"
+          heroku_email: 'sirpaquillo1@yahoo.com.mx'
           dontuseforce: false
           procfile: 'web: npm run production'
-          healthcheck: "https://bloglist-pipeline.herokuapp.com/health"
-          checkstring: "ok"
+          healthcheck: 'https://bloglist-pipeline.herokuapp.com/health'
+          checkstring: 'ok'
           delay: 5
           rollbackonhealthcheckfailed: true
