--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -2,7 +2,7 @@ name: Deployment pipeline healthcheck
 
 on:
   schedule:
-    - cron:  '* * * * *' #'0 0 * * 1-5' # “At 00:00 on every day-of-week from Monday through Friday.”
+    - cron:  '0 0 * * 1-5' # “At 00:00 on every day-of-week from Monday through Friday.”
 
 jobs:
   healthcheck:
