--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "production": "node index.js",
     "build": "react-scripts build",
     "eslint": "eslint './**/*.{js,jsx}'",
-    "test": "jest --verbose --runInBand --detectOpenHandles --silent",
+    "test": "jest --verbose --runInBand --silent",
     "start:test": "node index.js",
     "cypress:open": "cypress open",
     "test:e2e": "cypress run"
@@ -73,6 +73,7 @@
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
+    "jest": "^26.6.0",
     "json-server": "^0.16.2",
     "redux-devtools-extension": "^2.13.8",
     "supertest": "^6.1.3"
